cmake_minimum_required (VERSION 2.8.1)

PROJECT (reposeer)
SET (APP_SHORTNAME rs)
SET (APP_VERSION 0.63)

SET (SOURCE_DIR ${PROJECT_SOURCE_DIR}/src)
SET (TARGET ${SOURCE_DIR}/${APP_SHORTNAME}.py)
SET (DISTFILES ${PROJECT_SOURCE_DIR}/LICENSE ${PROJECT_SOURCE_DIR}/WHATSNEW.TXT)

SET (PYDISTNAME ${CMAKE_PROJECT_NAME}-${APP_VERSION})
SET (PYDISTFILES ${SOURCE_DIR}/*.py)

IF (WIN32)
    SET (DISTNAME ${CMAKE_PROJECT_NAME}-${APP_VERSION}-bin-win32)
ELSE (WIN32)
    SET (DISTNAME ${CMAKE_PROJECT_NAME}-${APP_VERSION}-bin-linux)
ENDIF (WIN32)

# configure (add version number)
CONFIGURE_FILE (
  ${SOURCE_DIR}/version.in
  ${SOURCE_DIR}/version.py
)

SET (EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
SET (LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})

SET (CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/modules ${CMAKE_MODULE_PATH})

ADD_SUBDIRECTORY (${SOURCE_DIR})

# Look for PyInstaller
FIND_PACKAGE (PyInstaller REQUIRED)
INCLUDE (UsePyInstaller)

SET_SOURCE_FILES_PROPERTIES (${TARGET} PROPERTIES PYTHONPATH ${SOURCE_DIR})
SET_SOURCE_FILES_PROPERTIES (${TARGET} PROPERTIES DEBUG OFF)
SET_SOURCE_FILES_PROPERTIES (${TARGET} PROPERTIES FILE_DEPLOYMENT ON)
SET_SOURCE_FILES_PROPERTIES (${TARGET} PROPERTIES WINDOWED OFF)
SET_SOURCE_FILES_PROPERTIES (${TARGET} PROPERTIES STRIP OFF)
SET_SOURCE_FILES_PROPERTIES (${TARGET} PROPERTIES UPX ON)
ADD_PI_EXECUTABLE (${APP_SHORTNAME} ${TARGET})

FIND_PROGRAM (ARCHIVER zip)

# pack executable
IF (ARCHIVER)
    FILE (REMOVE ${PROJECT_SOURCE_DIR}/redist/${DISTNAME}.zip ${PROJECT_SOURCE_DIR}/redist/${PYDISTNAME}.zip)
    
    FILE (COPY ${DISTFILES} DESTINATION ${EXECUTABLE_OUTPUT_PATH}/${DISTNAME})

    ADD_CUSTOM_COMMAND(TARGET ${APP_SHORTNAME} POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E make_directory
        ARGS ${PROJECT_SOURCE_DIR}/redist

        COMMAND ${CMAKE_COMMAND} -E copy_directory
        ARGS ${EXECUTABLE_OUTPUT_PATH}/dist ${EXECUTABLE_OUTPUT_PATH}/${DISTNAME}

        COMMAND ${ARCHIVER} 
        ARGS -r -9 ../redist/${DISTNAME}.zip ${DISTNAME}
    )

    # pack python scripts
    FILE (GLOB SOURCES ${PYDISTFILES})
    FILE (COPY ${SOURCES} ${DISTFILES} DESTINATION ${EXECUTABLE_OUTPUT_PATH}/${PYDISTNAME})
    ADD_CUSTOM_COMMAND(TARGET ${APP_SHORTNAME} POST_BUILD
        COMMAND ${ARCHIVER} 
        ARGS -r -9 ../redist/${PYDISTNAME}.zip ${PYDISTNAME}
    )
ENDIF (ARCHIVER)
